@@ -20,6 +20,13 @@ Version 1.3.4+svn:
    * frequency of idle animations halved.
    * Help topics for units now have 'advances from' links
    * added experimental new transition between map and background
+ * WML engine:
+   * now ConditionalWML handles [and], [or], and [not] with in-order precedence
+     (this is part of an effort to standardize the behavior of several 
+     different types of filters)
+   * the syntax for logical OR-filters is now "cond1[or]cond2[/or]" 
+     instead of "[or]cond1[/or][or]cond2[/or]"
+   * fix a bug where empty conditionals returned false
  * miscellaneous and bug fixes
    * fix renames causing OOS when made after moves or recruits
    * fix a minor glitch when selecting the leftmost menu heading
